<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">华人邦</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_main">首页</string>
    <string name="fragment_current">活期</string>
    <string name="fragment_regular">理财</string>
    <string name="fragment_my">我的</string>
    <string name="fragment_my_msg1">在一起\t更精彩</string>
    <string name="fragment_main_enter">进入</string>
    <string name="fragment_main_entercode">请输入VIP码</string>
    <string name="fragment_main_what">什么是贵宾通道？</string>
    <string name="fragment_main_safe1">快捷支付</string>
    <string name="fragment_main_safe2">富友支付，中国最大的大额支付平台，年交易额5000亿</string>
    <string name="fragment_main_safe3">资金托管</string>
    <string name="fragment_main_safe4">招商证卷为您的资金提供全程托管服务</string>
    <string name="fragment_main_safe5">保险公司承保</string>
    <string name="fragment_main_safe6">平安保险为您的资金安全进行承保</string>
    <string name="fragment_main_vip">输入VIP码</string>
    <string name="fragment_main_vipmsg">年投资100万以上会员专属/商会贵宾/理财活动通道</string>
    <string name="fragment_main_vip_highgain">·更高收益</string>
    <string name="fragment_main_vip_highservice">·高端定制</string>
    <string name="fragment_main_vip_private">私人尊享理财产品</string>
    <string name="fragment_main_vip_guaranteed">阳光保险全程保本</string>
    <string name="fragment_main_current_highgain">·实时到账</string>
    <string name="fragment_main_current_highservice">·随存随取</string>
    <string name="fragment_main_current_private">年化收益率</string>
    <string name="fragment_main_current_guaranteed">阳光保险全程保本</string>
    <string name="fragment_main_regular_threemonth">定期3个月</string>
    <string name="fragment_main_regular_sixmonth">定期6个月</string>
    <string name="fragment_main_regular_oneyear">定期12个月</string>
    <string name="fragment_current_more">查看更多</string>
    <string name="fragment_current_moregain">历史万份收益</string>
    <string name="fragment_current_seven">7日</string>
    <string name="fragment_current_month">1个月</string>
    <string name="fragment_current_twomonth">2个月</string>
    <string name="turnin">转入</string>
    <string name="activity_vip_title">VIP·贵宾专享</string>
    <string name="activity_vip_msg">会员专享</string>
    <string name="activity_turnout_out">超出限额</string>
    <string name="activity_turnout_string1">金额</string>
    <string name="activity_turnout_string2">实时到账</string>
    <string name="activity_turnout_string3">全部转出</string>
    <string name="activity_turnout_string4">今天总共可转出5次,</string>
    <string name="activity_turnout_string5">详细介绍</string>
    <string name="activity_turnout_string6">本次最多可转出0.00元</string>
    <string name="activity_turnout_string7">实时转出</string>
    <string name="activity_turnin_string1">该卡本次最多可转出50,000.00元</string>
    <string name="activity_turnin_string2">今天总共可转入5次,</string>
    <string name="activity_turnin_string3">预计收益到账时间</string>
    <string name="activity_turnin_string4">立即转入</string>
    <string name="activity_turnin_complete">完成</string>
    <string name="activity_turnin_protocol">《服务协议及风险通知》</string>
    <string name="activity_turn_from">从</string>
    <string name="activity_turn_to">到</string>
    <string name="activity_mybank">我的银行卡</string>
    <string name="activity_mybank_removebank">解除绑定</string>
    <string name="activity_mybank_cancel">取消</string>
    <string name="turnout">转出</string>
    <string name="buyfirst1">·50,000起购</string>
    <string name="buyfirst2">·100,000起购</string>
    <string name="regular1">·定期3个月</string>
    <string name="regular2">·定期6个月</string>
    <string name="regular3">·定期12个月</string>
    <string name="fragment_regular_guaranteed">·本金保障</string>
    <string name="fragment_regular_floatgain">·浮动收益</string>
    <string name="redemption">申购赎回</string>
    <string name="buyfirst">起购金额</string>
    <string name="buycost">申购费率</string>
    <string name="buyendtime">申购截止</string>
    <string name="buycomfirm">申购确认</string>
    <string name="buyowntime">投资期限</string>
    <string name="addcard">绑定银行卡</string>
    <string name="account_step1">填写基本资料</string>
    <string name="account_step2">设置交易密码</string>
    <string name="account_step3">绑卡验证</string>
    <string name="account_step1_name">姓名</string>
    <string name="account_step1_name_hint">输入真实姓名</string>
    <string name="account_step1_card">身份证</string>
    <string name="account_step1_card_hint">输入18位身份证号</string>
    <string name="account_step1_phone">手机号</string>
    <string name="account_step1_phone_hint">输入常用手机号</string>
    <string name="account_step1_agree">同意</string>
    <string name="account_step1_protocol">《账户服务协议》</string>
    <string name="account_step2_password">请设置交易密码</string>
    <string name="account_step2_password_legend">说明：此密码用于购买、赎回、转账等操作时，验证您的身份</string>
    <string name="account_step3_name">发卡行</string>
    <string name="account_step3_name_hint">请选择银行</string>
    <string name="account_step3_card">卡号</string>
    <string name="account_step3_card_hint">输入常用银行卡号</string>
    <string name="account_step3_phone">手机号</string>
    <string name="account_step3_phone_hint">请输入银行预留手机号</string>
    <string name="account_step3_securitycode">验证码</string>
    <string name="account_securitycode">获取验证码</string>
    <string name="account_step3_protocol">《委托扣款协议》</string>
    <string name="account_step3_bind">绑定</string>
    <string name="dialog_enterpwd_title">请输入交易密码</string>
    <string name="dialog_entersecuritycode_title">请输入短信验证码</string>
    <string name="myproduct">理财资产</string>
    <string name="myproduct_buycost">·买入金额:</string>
    <string name="myproduct_buytime">·买入时间:</string>
    <string name="myproduct_endtime">·结束时间:</string>
    <string name="myproduct_yegain">·昨日收益:</string>
    <string name="myproduct_benxi">·本息金额:</string>
    <string name="myproduct_vip">·VIP:</string>
    <string name="myproduct_tag">·当前状态:</string>
    <string name="record">交易记录</string>
    <string name="record_ok">确定</string>
    <string name="record_week">近一周</string>
    <string name="record_month">近一月</string>
    <string name="record_threemonth">近三月</string>
    <string name="item_bank_onequota">单笔限额</string>
    <string name="item_bank_dayquota">每日限额</string>
    <string name="item_bank_dayquotainfo">50,000.00(元)</string>
    <string name="dialog_toast_title">总收益</string>
    <string name="dialog_toast_msg">总资产=（活期+余额）+（定期+本金）+（股票基金持有市值）；定期+的预估收益到期后的收益为准，到期前不计入总资产。</string>
    <string name="dialog_toast_ok">知道了</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">刷新中&#8230;</string>
    <string name="header_hint_refresh_time">上次刷新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">松开加载更多</string>
    <string name="value_default">--</string>
    <string name="fragment_news">新闻</string>
    <string name="fragment_huanqiushishi">新闻</string>
    <string name="space">&#160;</string>
    <string name="yt">亚太</string>
    <string name="news_channel">频道管理</string>
    <string name="have_add">已添加</string>
    <string name="have_add_introduce">点击删除，长按拖动排序</string>
    <string name="can_add">可添加</string>
    <string name="can_add_introduce">快速点击完成添加</string>
    <string name="search_input">请输入股票代码/名称/简写</string>
    <string name="webview_help">帮助</string>
    <string name="special_shuoming">购买3/6/12个月定期产品，每月1日起息，在此之前都会按照7天活期滚动投资，自动帮您做活期理财，不让您的钱休息。</string>
    <string name="shuoming">特别说明:</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="fragment_shuoshuo">随说</string>
    <string name="shuoshuoname">华人堂</string>
    <string name="China_PingAn_insurance_full_guarantee">账户安全由平安保险承保</string>
    <string name="login_hint">华人邦用户名/手机号</string>
    <string name="version_name">版本号:</string>
    <string name="can_not_find_version_name">华人邦</string>
    <string name="fragment_shopping">海外购</string>
    <string name="my_shopping_cart">购物车</string>
    <string name="my_shopping_order">订单</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_modif_nickname">昵称</string>
    <string name="current_version">当前版本:</string>
    <string name="update_date">最后更新时间:</string>
    <string name="type_limit">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="type_email">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.@_</string>
    <string name="type_pwd">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM`-=[]\;,./~!@#$%^*()_+}{:?</string>
    <string name="read_more">展开</string>
    <string name="read_less">  收起</string>
    <string-array name="bank_list">
        <item>0102-中国工商银行</item>
        <item>0103-中国农业银行</item>
        <item>0104-中国银行</item>
        <item>0105-中国建设银行</item>
        <item>0403-中国邮政储蓄银行</item>
        <item>0307-平安银行</item>
        <item>0305-民生银行</item>
        <item>0303-中国光大银行</item>
        <item>0306-广东发展银行</item>
        <item>0302-中信实业银行</item>
        <item>0309-兴业银行</item>
        <item>0304-华夏银行</item>
        <item>0301-交通银行</item>
        <item>0308-招商银行</item>
        <item>0310-上海浦东发展银行</item>
    </string-array>
    <string-array name="hwgtitle">
        <item>首页</item>
        <item>分类</item>
        <item>轻奢</item>
        <item>独到</item>
        <item>玩乐</item>
    </string-array>
    <string name="title_activity_all_goods">AllGoodsActivity</string>
    <string name="title_activity_goods">GoodsActivity</string>
    <string name="title_activity_country_goods">CountryGoods</string>
    <string name="title_activity_goods_detail">GoodsDetailActivity</string>
    <string name="title_activity_goods_detail_comment">GoodsDetailCommentActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_pay_way">PayWayActivity</string>
    <string name="title_activity_pay_result">PayResultActivity</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_test_login">TestLogin</string>
    <string name="title_activity_goods_sort">GoodsSortActivity</string>
    <string name="title_activity_goods_sort_detail">GoodsSortDetailActivity</string>
    <string name="title_activity_all_store">AllStoreActivity</string>
    <string name="title_activity_all_store_list">AllStoreListActivity</string>
    <string name="hello"><u>phone: 1390123456</u></string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="text">http://miloisbadboy.com/</string>
    <string name="menu_settings">menu_settings</string>
    <string name="login_username">用户名/手机号</string>
    <string name="logn_pwd">密码</string>
    <string name="logn_repwd">重复密码</string>
    <string name="reg_text1">Terms condition |</string>
    <string name="app_name_inner">云通讯IM(内部使用)</string>
    <string name="app_server_view">登陆参数配置</string>
    <string name="app_server_config_error_tips">请先进行登陆参数配置</string>
</resources>