<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/bj"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#b4000000"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/dialog_toast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/dialog_toast_title"
            android:textColor="@color/tljr_white"
            android:textSize="20sp" />

        <View
            android:id="@+id/dialog_toast_line"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/dialog_toast_title"
            android:layout_marginTop="10dp"
            android:background="@color/tljr_white" />

        <TextView
            android:id="@+id/dialog_toast_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_toast_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_toast_msg"
            android:textColor="@color/tljr_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dialog_toast_button"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/img_zhidaole"
            android:text="@string/dialog_toast_ok"
            android:textColor="@color/tljr_white" />
    </RelativeLayout>

</RelativeLayout>