<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tljr_bj"
    android:fitsSystemWindows="true"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:id="@+id/tljr_grp_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/tljr_white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tljr_txt_sy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tljr_click"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/img_shouye2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/fragment_main"
                android:textColor="@color/default_text"
                android:textSize="11dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linea_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tljr_click"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/img_haiwaigou2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/fragment_shopping"
                android:textColor="@color/default_text"
                android:textSize="11dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tljr_img_hqshuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tljr_click"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/img_xinwen2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/fragment_news"
                android:textColor="@color/default_text"
                android:textSize="11dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tljr_img_hq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tljr_click"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/img_dingqi2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/fragment_regular"
                android:textColor="@color/default_text"
                android:textSize="11dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tljr_img_scqx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tljr_click"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/img_geren2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/fragment_my"
                android:textColor="@color/default_text"
                android:textSize="11dp" />
        </LinearLayout>
    </LinearLayout>

    <com.abcs.huaqiaobang.main.MyViewPager
        android:id="@+id/tljr_mViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tljr_grp_fg"
        android:layout_alignParentLeft="true" />

    <RelativeLayout
        android:id="@+id/tljr_grp_fg"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/tljr_grp_bottom">

        <ImageView
            android:id="@+id/tljr_img_fx"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_222fengexian" />
    </RelativeLayout>


</RelativeLayout>